k8s/registry/registry-istio-ingress.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: registry-gateway
  namespace: registry
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 5000
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry
  namespace: registry
spec:
  hosts:
  - "*"
  gateways:
  - registry-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: registry
